add `@DebugJunitExtensions` annotation to print registered and called junit extensions